--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Gun Game</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu</title>
+    <link rel="stylesheet" href="./css/menu.css">
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="400"></canvas>
-  <script src="game.js"></script>
+<!-- Main Menu Section -->
+<div class="menu" id="main-menu">
+    <h1>Your Game Title</h1>
+    <a href="./game.html" class="button">Start Game</a>
+    <a href="#settings" class="button">Settings</a>
+    <a href="#quit" class="button">Quit</a>
+</div>
+
+<!-- Settings Section -->
+<div id="settings" class="settings">
+    <h2>Settings</h2>
+    <p>Settings are not implemented yet.</p>
+    <a href="./menu.html" class="button back-button">Back to Menu</a>
+</div>
+
 </body>
 </html>
