--- a/game.html
+++ b/game.html
@@ -18,7 +18,7 @@
   <!-- Dropdown Menu -->
   <div id="dropdownMenu" class="dropdown-menu">
     <a href="./index.html" class="button">Main Menu</a>
-    <a href="#settings" class="button">Settings</a>
+    <a href="./settings.html" class="button">Settings</a>
   </div>
 
 </body>
