--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
     <link rel="stylesheet" href="./css/menu.css">
+    <script src="./js/menu.js" defer></script>
+
 </head>
 <body>
 <!-- Main Menu Section -->
 <div class="menu" id="main-menu">
     <h1>Your Game Title</h1>
     <a href="./game.html" class="button">Start Game</a>
-    <a href="#settings" class="button">Settings</a>
-    <a href="#quit" class="button">Quit</a>
+    <a href="./settings.html" class="button">Settings</a>
+    <a href="#" id="quitButton" class="button">Quit</a> <!-- Quit button -->
 </div>
 
 <!-- Settings Section -->
