--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <!-- Main Menu Section -->
 <div class="menu" id="main-menu">
-    <h1>Your Game Title</h1>
+    <h1>Firestorm</h1>
     <a href="./game.html" class="button">Start Game</a>
     <a href="./settings.html" class="button">Settings</a>
     <a href="#" id="quitButton" class="button">Quit</a> <!-- Quit button -->
