--- a/game.html
+++ b/game.html
@@ -21,5 +21,11 @@
     <a href="./settings.html" class="button">Settings</a>
   </div>
 
+    <!-- Audio for Background Music -->
+    <audio id="backgroundMusic" loop autoplay>
+      <source src="your-audio-file.mp3" type="audio/mp3">
+      Your browser does not support the audio element.
+    </audio>
+
 </body>
 </html>
