--- a/game.html
+++ b/game.html
@@ -11,9 +11,7 @@
   <canvas id="gameCanvas" width="800" height="400"></canvas>
   
   <!-- Menu Button -->
-  <div id="menuButton" class="menu-button">
-    ☰
-  </div>
+  <div id="menuButton" class="menu-button">☰</div>
 
   <!-- Dropdown Menu -->
   <div id="dropdownMenu" class="dropdown-menu">
@@ -21,11 +19,19 @@
     <a href="./settings.html" class="button">Settings</a>
   </div>
 
-    <!-- Audio for Background Music -->
-    <audio id="backgroundMusic" loop autoplay>
-      <source src="your-audio-file.mp3" type="audio/mp3">
-      Your browser does not support the audio element.
-    </audio>
+  <!-- Audio for Background Music -->
+  <audio id="backgroundMusic" loop autoplay>
+    <source src="your-audio-file.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+  </audio>
+
+  <!-- Game Over Screen -->
+  <div id="gameOverScreen" style="display:none;">
+    <div id="finalScore"></div>
+    <div id="bestScore"></div>
+    <button id="playAgainButton">Play Again</button>
+    <button id="backToMenuButton">Back to Menu</button>
+  </div>
 
 </body>
 </html>
