how to play section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>Firestorm</h1>
     <a href="./game.html" class="button">Start Game</a>
     <a href="./settings.html" class="button">Settings</a>
+    <a href="./howtoplay.html" class="button">How to play</a>
     <a href="#" id="quitButton" class="button">Quit</a> <!-- Quit button -->
 </div>
 
