--- a/game.html
+++ b/game.html
@@ -33,5 +33,14 @@
     <button id="backToMenuButton">Back to Menu</button>
   </div>
 
+<!-- Victory Screen (hidden by default) -->
+<div id="victoryScreen" style="display: none;">
+  <h1>Victory!</h1>
+  <p>Congratulations, you reached level 10!</p>
+  <p>Final Score: <span id="victoryScore"></span></p>
+  <button id="restartButton">Restart Game</button>
+  <button id="backToMenuButton">Back to Menu</button>
+</div>
+
 </body>
 </html>
