--- a/howtoplay.html
+++ b/howtoplay.html
@@ -15,7 +15,7 @@
 
       <h2>Controls</h2>
       <ul>
-        <li>Move: Arrow Keys or WASD</li>
+        <li>Move: Arrow Keys </li>
         <li>Attack: Spacebar</li>
         <li>Pause: top left button</li>
       </ul>
